update to map-lib 0.2.1

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+#skipp ide directory
+.idea/
+
+#build dir
+target/
+
 # Package Files #
 *.jar
 *.war
